Added SIP calling for actually testing the cutover script.

--- a/local-lab/real-services/kamailio/kamailio.cfg
+++ b/local-lab/real-services/kamailio/kamailio.cfg
@@ -6,11 +6,12 @@ listen=udp:0.0.0.0:5060
 
 mpath="/usr/lib/kamailio/modules/"
 
-loadmodule "sl.so"
 loadmodule "tm.so"
+loadmodule "sl.so"
 loadmodule "rr.so"
 loadmodule "maxfwd.so"
 loadmodule "xlog.so"
+loadmodule "pv.so"
 loadmodule "ctl.so"
 loadmodule "dispatcher.so"
 
@@ -24,11 +25,13 @@ request_route {
     exit;
   }
 
-  if (!ds_select_dst("1", "4")) {
+  if (!ds_select_dst("1", "0")) {
     xlog("L_ERR", "No dispatcher destination available\n");
     sl_send_reply("500", "No destination");
     exit;
   }
+
+  xlog("L_NOTICE", "CUTOVER_DST method=$rm ci=$ci du=$du ruri=$ru\n");
 
   if (!t_relay()) {
     sl_reply_error();
